# TUSDT-SmartContract

./: .gitignore  Cargo.toml  README.md  lib.rs
contracts/tusdt-auction/: Cargo.toml  lib.rs  tests.rs
contracts/tusdt-erc20/: Cargo.toml  lib.rs  tests.rs
contracts/tusdt-oracle/: Cargo.toml  lib.rs  tests.rs
contracts/tusdt-vault/: Cargo.toml  interest.rs  lib.rs  params.rs  risk.rs  tests.rs  vault_access.rs
env/: Cargo.toml
env/src/: lib.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
tools/: .env.example  package.json  tsconfig.json
tools/e2e/: oracle.test.ts
tools/scripts/: deployVault.ts  uploadContract.ts
tools/src/: accounts.ts  api.ts  artifact.ts  codec.ts  config.ts  constants.ts  contract.ts  deployment.ts  env.ts
tools/src/interactions/: oracle.ts
