[workspace.package]
license = "MIT-0"
authors = ["tensorusd tensorusd@gmail.com"]
homepage = ""
repository = ""
edition = "2021"

[workspace]
members = [
    "contracts/tusdt-erc20",
    "contracts/tusdt-auction",
    "contracts/tusdt-vault",
]
resolver = "2"

[workspace.dependencies]
ink = { version = "5.1.1", default-features = false }

ink_e2e = { version = "5.1.1" }
