[package]
name = "tusdt-primitives"
version = "0.1.0"
authors = ["tensorusd admin@tensorusd.com"]
edition = "2021"

[dependencies]
ink = { workspace = true, default-features = false }
sp-arithmetic = { workspace = true, default-features = false }

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = ["ink/std", "sp-arithmetic/std"]
