[package]
name = "tusdt-erc20"
version = "0.1.0"
authors = ["tensorusd admin@tensorusd.com"]
edition = "2021"

[dependencies]
ink = { workspace = true, default-features = false }
tusdt-env = { path = "../../env", default-features = false }

[dev-dependencies]
ink_e2e = { workspace = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std", "tusdt-env/std"]
ink-as-dependency = []
e2e-tests = []
